Fix dashboard widget overflow

--- a/frontend/scripts/react-components/dashboard-element/dashboard-widget/dashboard-widget.scss
+++ b/frontend/scripts/react-components/dashboard-element/dashboard-widget/dashboard-widget.scss
@@ -48,6 +48,7 @@
     border-radius: 6px;
     border: solid 1px rgba($white, 0.13);
     margin: 18px 0 0;
+    overflow: auto;
 
     .widget-spinner {
       display: flex;
